<resources>
    <string name="app_name">Android开发者</string>
    <!-- splash -->
    <string name="splash_skip">跳过</string>
    <!-- loading -->
    <string name="loading_text">加载中...</string>
    <!-- error-->
    <string name="error_hint">加载失败，请重试</string>
    <string name="error_button_text">加载失败，请重试</string>
    <!-- empty -->
    <string name="empty_hint">暂时还没有数据呀</string>
    <!-- main -->
    <string name="bottom_nav_main">首页</string>
    <string name="bottom_nav_hierarchy">架构</string>
    <string name="bottom_nav_project">项目</string>
    <string name="bottom_nav_mine">我的</string>
    <string name="left_nav_video">视频</string>
    <string name="drawer_open">打开侧滑菜单</string>
    <string name="drawer_close">关闭侧滑菜单</string>
    <string name="drawer_login">点击头像登录</string>
    <string name="menu_hot">热词</string>
    <string name="menu_search">搜索</string>
    <string name="exit_app">想要退出?请再次点击鸭</string>
    <string name="article_tag_project">项目</string>
    <string name="article_tag_hot">热门</string>
    <string name="share_element_view">share_element_view</string>
    <string name="please_you_must_login">登录才能收藏文章哟</string>
    <string name="please_you_must_login_2">登录才能取消关注哟</string>
    <string name="collect_article">收藏文章成功</string>
    <string name="collect_cancel_article">取消关注</string>
    <!-- 登录 -->
    <string name="login_success_auto">已经为您自动登录啦 好开森！</string>
    <string name="login_account_text_hint">请输入用户名</string>
    <string name="login_pwd_text_hint">请输入密码</string>
    <string name="login_pwd_confirm_text_hint">确认密码</string>
    <string name="login_button_hint">登录鸭</string>
    <string name="login_register_button_hint">点我注册</string>
    <string name="login_tool_bar_title">登录</string>
    <string name="login_account_illegal">用户名包含非法字符</string>
    <string name="login_password_illegal">密码包含非法字符</string>
    <string name="login_length_illegal">用户名或密码长度必须大于6位</string>
    <string name="login_success">登录成功了鸭</string>
    <string name="login_error">被不明原因干扰 登录出错了鸭</string>
    <!-- 注册 -->
    <string name="register_tool_bar_title">注册</string>
    <string name="register_button_hint">成为会员吧</string>
    <string name="register_password_is_different_from_confirm_password">两次密码不同</string>
    <string name="register_success">欢迎加入开发者的世界</string>
    <string name="register_error">呜呜呜 你被服务器拒绝了</string>
    <!-- 文章详情 -->
    <string name="detail_menu_share">分享</string>
    <string name="detail_menu_collect">收藏</string>
    <string name="detail_menu_browser">浏览器打开</string>
    <string name="detail_menu_collect_2">已经关注</string>
    <!-- knowledge list -->
    <string name="knowledge_no_more_data">我可是有底线滴</string>
    <!-- mine -->
    <string name="mine_tv_username">点击头像登录</string>
    <string name="mine_tv_my_collection">我的收藏</string>
    <string name="mine_tv_about_me">关于我</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_dialog_cancel">取消</string>
    <string name="mine_dialog_sure">确定</string>
    <string name="mine_please_login">这是隐私，不能偷看</string>
    <string name="mine_logout_dialog_title">退出登录</string>
    <string name="mine_logout_dialog_content">确定要退出登录吗</string>
    <string name="mine_logout_success">成功登出</string>
    <!-- 我的收藏 -->
    <string name="collection_tool_bar_title">我的收藏</string>
    <!-- about me -->
    <string name="about_me_content">
        <![CDATA[
        <h2>Android开发者</h2>
        <p>\t\tApp每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/zycoJamie/WanAndroidApp" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
        ]]>
    </string>
    <!-- hot website -->
    <string name="hot_tv_tag">热门站点</string>
    <string name="hot_title">Android开发必看的神秘网站</string>
    <!-- search -->
    <string name="search_hot_word">热词</string>
    <string name="search_history">搜索历史</string>
    <string name="search_clear_history">清空</string>
    <string name="search_dialog_clear_history">清空历史记录</string>
    <string name="search_dialog_clear_history_question">确定清除历史记录吗?</string>
    <string name="search_menu_query_hint">输入查询内容的关键词</string>
    <!-- video -->
    <string name="video_title">熊猫直播</string>
    <string name="video_play_error">获取直播失败</string>
    <string name="video_net_error">网络似乎出故障啦</string>

    <!-- ijkPlayer -->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

</resources>
