<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_article_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="2"
        android:title="@string/detail_menu_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_article_collect"
        android:icon="@drawable/ic_like"
        android:orderInCategory="1"
        android:title="@string/detail_menu_collect"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_article_browser"
        android:icon="@drawable/ic_browser"
        android:orderInCategory="3"
        android:title="@string/detail_menu_browser"
        app:showAsAction="never" />

</menu>