<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:ignore="RtlCompat">

    <View
        android:id="@+id/view_blue"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_180"
        android:background="@color/theme" />
    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/dp_85"
        android:layout_height="@dimen/dp_85"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view_blue"
        app:layout_constraintLeft_toLeftOf="@id/view_blue"
        app:layout_constraintRight_toRightOf="@id/view_blue"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/homepage_color"
        android:text="@string/mine_tv_username"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        app:layout_constraintBottom_toBottomOf="@id/view_blue"
        app:layout_constraintLeft_toLeftOf="@id/view_blue"
        app:layout_constraintRight_toRightOf="@id/view_blue"/>

    <TextView
        android:id="@+id/tv_mine_collection"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_46"
        android:textColor="@color/homepage_color"
        android:text="@string/mine_tv_my_collection"
        android:drawableStart="@drawable/ic_collect"
        android:drawablePadding="@dimen/dp_12"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:background="@color/white_255"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_12"
        android:paddingStart="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/view_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_1"
        android:background="@color/white_255"
        app:layout_constraintTop_toBottomOf="@id/tv_mine_collection"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_about_me"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_46"
        android:textColor="@color/homepage_color"
        android:text="@string/mine_tv_about_me"
        android:drawableStart="@drawable/ic_about_me"
        android:drawablePadding="@dimen/dp_8"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:background="@color/white_255"
        android:layout_marginTop="@dimen/dp_1"
        android:paddingStart="@dimen/dp_13"
        app:layout_constraintTop_toBottomOf="@id/tv_mine_collection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/shape_button"
        android:gravity="center"
        android:text="@string/mine_logout"
        android:textColor="@color/white_255"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintTop_toBottomOf="@id/tv_about_me"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>