<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_255"
    tools:ignore="RtlCompat">

    <include layout="@layout/common_tool_bar_2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb_common"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_60"
                android:background="@drawable/shape_login_item"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:layout_marginStart="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_account" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@null"
                    android:gravity="center_vertical|start"
                    android:hint="@string/login_account_text_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/shape_login_item"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:layout_marginStart="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_password" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@null"
                    android:gravity="center_vertical|start"
                    android:hint="@string/login_pwd_text_hint"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@drawable/ripple_button"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/login_button_hint"
                    android:textColor="@color/white_255"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:enabled="true"
                    android:gravity="center|right"
                    android:text="@string/login_register_button_hint"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/sp_13"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>