<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlCompat">

    <include layout="@layout/common_tool_bar_2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb_common">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_60"
                android:background="@drawable/shape_login_item"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:layout_marginStart="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_account" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/login_account_text_hint"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/shape_login_item"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:layout_marginStart="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_password" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/login_pwd_text_hint"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded,TextFields" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/shape_login_item"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:layout_marginStart="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_password" />

                <EditText
                    android:id="@+id/et_pwd_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/login_pwd_confirm_text_hint"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded,TextFields" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_40"
                android:background="@drawable/ripple_button"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/register_button_hint"
                android:textColor="@color/white_255"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
